<resources>
    <string name="app_name">Drop</string>
    <string name="title_activity_create_drop">Create</string>

    <string name="latitude">Latitude:</string>
    <string name="longitude">Longitude:</string>
    <string name="radius">Radius (km):</string>
    <string name="caption">Caption:</string>
    <string name="take_picture">Image:</string>
    <string name="open_camera">Camera</string>

    <string name="create">Create</string>
    <string name="content_authority">com.example.drop.drop.app</string>
    <string name="sync_account_type">drop.app.example.com</string>
    <string name="action_settings">Settings</string>
    <string name="action_create">Create</string>
    <string name="action_next">Next</string>
    <string name="action_coordinates">Get Coordinates</string>
    <string name="title_activity_drop_map">DropMapActivity</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_scan">Scan</string>
    <string name="enable_location_title">Current Location Required</string>
    <string name="enable_location_message">
        Scanning requires your current location.  Please enable location services.
    </string>
    <string name="go_to_settings">Go to Settings</string>
    <string name="cancel">Cancel</string>
    <string name="scanning">Scanning for nearby leaves...</string>
</resources>
