<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.drop.drop.DropMapActivity">

    <item
        android:id="@+id/action_scan"
        android:icon="@android:drawable/ic_menu_mapmode"
        android:orderInCategory="1"
        android:title="@string/action_scan"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_create"
        android:icon="@android:drawable/ic_input_add"
        android:orderInCategory="2"
        android:title="@string/action_create"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:orderInCategory="100"
        app:showAsAction="never" />

</menu>
