<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.drop.drop.CreateDropActivity">

    <item
        android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_coordinates"
        android:title="@string/action_coordinates"
        android:orderInCategory="1"
        android:icon="@android:drawable/ic_menu_compass"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_next"
        android:title="@string/action_next"
        android:orderInCategory="2"
        android:icon="@android:drawable/ic_media_next"
        app:showAsAction="always" />
</menu>
